examples/neg/TernaerOper-Neg3.iml
// syntax error 1 condition
program ternaereOperatorNeg()
do
  debugout ? 1 : 2
endprogram